added list of upcoming additions to website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>UPCOMING FEATURES</h1>
+  <ol>
+    <li>Impossible List</li>
+    <li>Download Resume Button</li>
+  </ol>
   <img class="preview" src="images/taquitosandcheese_tn.jpg" alt="Taquitos and Cheese">
   <div class="overlay"></div>
   <script src="script.js"></script>
