Added black-white gradient to bg.
Todo: last todo + set restrictions on image where device vw>vh.
Additional: light bulb icon for transtion to dark mode

--- a/index.html
+++ b/index.html
@@ -1,49 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Ajeet Gill Ver: 1.1.1</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="./css/main.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="about-me">
-        <p>Hey, I'm</p>
-        <h1>AJEET</h1>
-        <p>I do web development</p>
-        <!-- @todo: add animation effect on the span below, fades from "read books"->"take pictures"  -->
-        <!-- <p class="about-me--para">& "<span>read books</span>"</p> -->
-      </div>
-      <div id="socialmedia">
-        <a href="https://www.instagram.com/ajeet_gill_/">
-          <img
-            class="social-media-icons"
-            src="./assets/instagram.svg"
-            alt="instagram account"
-          />
-        </a>
-        <a href="https://github.com/ajeetshergill"
-          ><img
-            class="social-media-icons"
-            src="./assets/github.svg"
-            alt="github account"
-        /></a>
-        <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"
-          ><img
-            class="social-media-icons"
-            src="./assets/goodreads.svg"
-            alt="goodreads account"
-        /></a>
-        <a href="https://www.linkedin.com/in/ajeet-gill/"
-          ><img
-            class="social-media-icons"
-            src="./assets/linkedin.svg"
-            alt="linkedIn account"
-        /></a>
-      </div>
-      <p id="disclaimer">*optimised for mobile only at the moment</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Ajeet Gill Ver: 1.1.1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="./css/main.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="about-me">
+      <p>Hey, I'm</p>
+      <h1>AJEET</h1>
+      <p>I do web development</p>
+      <!-- @todo: add animation effect on the span below, fades from "read books"->"take pictures"  -->
+      <!-- <p class="about-me--para">& "<span>read books</span>"</p> -->
     </div>
-  </body>
+    <div id="socialmedia">
+      <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons dark-mode" src="./assets/instagram.svg" alt="instagram account" /></a>
+      <a href="https://github.com/ajeetshergill"><img class="social-media-icons dark-mode" src="./assets/github.svg" alt="github account" /></a>
+      <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons dark-mode" src="./assets/goodreads.svg" alt="goodreads account" /></a>
+      <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons dark-mode" src="./assets/linkedin.svg" alt="linkedIn account" /></a>
+    </div>
+    <p id="disclaimer">*optimised for mobile only at the moment</p>
+  </div>
+</body>
+
 </html>
 <!--NOTE: export the color hex values, icons and images beforehand. -->
