Added rotating text and separated waves.css file

--- a/index.html
+++ b/index.html
@@ -10,29 +10,36 @@
 
 <body>
   <main class="container">
-    
+
     <div class="sidebarleft"></div>
     <section class="about-me">
       <p>Hey, I'm</p>
       <h1>AJEET</h1>
-      <p>I do web development</p>
-      <!-- @todo: add animation effect on the span below, fades from "read books"->"take pictures"  -->
-      <!-- <p class="about-me--para">& "<span>read books</span>"</p> -->
+      <p>I do
+        <span class="txt-rotate" data-period="10"
+          data-rotate='[ "various stuff.", "manual photography.", "read books.", "web development.", "fun!!!!!" ]'></span>
+      </p>
       <div id="socialmedia">
         <!-- Commented dark mode thing, coz not good for eyes in general -->
         <!-- <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons dark-mode" src="./assets/instagram.svg" alt="instagram account" /></a>
           <a href="https://github.com/ajeetshergill"><img class="social-media-icons dark-mode" src="./assets/github.svg" alt="github account" /></a>
-        <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons dark-mode" src="./assets/goodreads.svg" alt="goodreads account" /></a>
+          <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons dark-mode" src="./assets/goodreads.svg" alt="goodreads account" /></a>
         <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons dark-mode" src="./assets/linkedin.svg" alt="linkedIn account" /></a> -->
-        <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg" alt="instagram account" /></a>
-        <a href="https://github.com/ajeetshergill"><img class="social-media-icons" src="./assets/github.svg" alt="github account" /></a>
-        <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons" src="./assets/goodreads.svg" alt="goodreads account" /></a>
-        <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons" src="./assets/linkedin.svg" alt="linkedIn account" /></a>
+        <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg"
+            alt="instagram account" /></a>
+        <a href="https://github.com/ajeetshergill"><img class="social-media-icons" src="./assets/github.svg"
+            alt="github account" /></a>
+        <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons"
+            src="./assets/goodreads.svg" alt="goodreads account" /></a>
+        <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons" src="./assets/linkedin.svg"
+            alt="linkedIn account" /></a>
       </div>
     </section>
     <div class="sidebarright"></div>
-    
+
     <!-- <p id="disclaimer">*optimised for mobile only at the moment</p> -->
+    <link rel="stylesheet" href="./css/waves.css" />
+    <script src="./js/main.js"></script>
   </main>
 </body>
 
