--- a/404.html
+++ b/404.html
@@ -5,11 +5,26 @@
   <meta charset="UTF-8" />
   <title>Ajeet Gill Ver: 1.1.1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="./css/main.css" />
+  <meta http-equiv="refresh" content="4;url=https://ajeetshergill.github.io/" />
+  <link rel="stylesheet" href="./css/404.css" />
 </head>
 
 <body>
-NOPE you can't visit some place which doesn't exist, applies to both online and offline life.
+  <main class="container">
+    <!-- <div class="sidebarleft"></div> -->
+    <p>Hey I tried looking for what you asked.<br>But there's nothing</p>
+    <p>In my world we call it,</p>
+    <h1>404</h1>
+    <h3>PAGE DOESN'T EXIST</h3>
+    <p>Lemme redirect you <br> to someplace better. </p>
+
+    <p>Just a second <span id='loading-dots'>...</span></p>
+    <!-- <div class="sidebarright"></div> -->
+
+  </main>
+
+  <link rel="stylesheet" href="./css/waves.css" />
+  <!-- <script src="./js/404.js"></script> -->
 </body>
 
 </html>
