--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Ajeet Gill Ver: 1.1.1</title>
+  <title>Ajeet Gill</title>
+  <!-- SUGGESTION: rename title bar when visiter leaves the tab -->
+  <!-- SUGGESTION: auto read the default theme of user system and set enable theme on the page accordingly -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./css/main.css" />
 </head>
@@ -20,11 +22,6 @@
           data-rotate='[ "various stuff.", "manual photography.", "read books.", "web development.", "fun!!!!!" ]'></span>
       </p>
       <div id="socialmedia">
-        <!-- Commented dark mode thing, coz not good for eyes in general -->
-        <!-- <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons dark-mode" src="./assets/instagram.svg" alt="instagram account" /></a>
-          <a href="https://github.com/ajeetshergill"><img class="social-media-icons dark-mode" src="./assets/github.svg" alt="github account" /></a>
-          <a href="https://www.goodreads.com/user/show/83526171-ajeet-gill"><img class="social-media-icons dark-mode" src="./assets/goodreads.svg" alt="goodreads account" /></a>
-        <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons dark-mode" src="./assets/linkedin.svg" alt="linkedIn account" /></a> -->
         <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg"
             alt="instagram account" /></a>
         <a href="https://github.com/ajeetshergill"><img class="social-media-icons" src="./assets/github.svg"
@@ -37,7 +34,6 @@
     </section>
     <div class="sidebarright"></div>
 
-    <!-- <p id="disclaimer">*optimised for mobile only at the moment</p> -->
     <link rel="stylesheet" href="./css/waves.css" />
     <script src="./js/main.js"></script>
   </main>
