--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>AJEET</h1>
       <p>I do
         <span class="txt-rotate" data-period="10"
-          data-rotate='[ "various stuff.", "manual photography.", "read books.", "web development.", "fun!!!!!" ]'></span>
+          data-rotate='[ "various stuff.", "read books.", "web development.", "fun!!!!!" ]'></span>
       </p>
       <div id="socialmedia">
         <a href="https://www.instagram.com/ajeet_gill_/"><img class="social-media-icons" src="./assets/instagram.svg"
@@ -31,10 +31,26 @@
         <a href="https://www.linkedin.com/in/ajeet-gill/"><img class="social-media-icons" src="./assets/linkedin.svg"
             alt="linkedIn account" /></a>
       </div>
+      <div id="notice" style="font-size: 1rem; line-height: .5rem;">
+        <p>I've started a subscibers list :)</p>
+        <p> <span style="font-size: .8rem; font-weight: 800;">to share</span> <span
+            style="background-color: rgb(218 218 218); padding: 0px 10px;"> 'TBD: to be decided...' </span> </p>
+        <p id="tempID" style="margin-top: 10px;">FOR SURE IT WON'T BE BORING</p>
+        <button style="padding: 10px;margin-top: 10px;
+        border: solid 2px #88ee00;
+        background-color: #bcff55;
+        border-radius: 5px;
+        box-shadow: #bbff55 0px 10px 25px;"><a
+            style="text-decoration: none; font-weight: 900; text-transform: uppercase;"
+            href="https://forms.gle/axz89WcjvM2YQyvb7"> Get on the
+            list</a></button>
+      </div>
+
     </section>
     <div class="sidebarright"></div>
 
-    <link rel="stylesheet" href="./css/waves.css" />
+    <!-- Commented out the waves code coz it was distracting :|  -->
+    <!-- <link rel="stylesheet" href="./css/waves.css" /> -->
     <script src="./js/main.js"></script>
   </main>
 </body>
