Updated google form link
This new Google form link is connected with ButtonDown.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         border-radius: 5px;
         box-shadow: #bbff55 0px 10px 25px;"><a
             style="text-decoration: none; font-weight: 900; text-transform: uppercase;"
-            href="https://forms.gle/axz89WcjvM2YQyvb7"> Get on the
+            href="https://forms.gle/G3MztEWUrnPScqCw9"> Get on the
             list</a></button>
       </div>
 
