--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="notice" style="font-size: 1rem; line-height: .5rem;">
         <p>I've started a subscibers list :)</p>
         <p> <span style="font-size: .8rem; font-weight: 800;">to share</span> <span
-            style="background-color: rgb(218 218 218); padding: 0px 10px;"> 'TBD: to be decided...' </span> </p>
+            style="background-color: rgb(218 218 218); padding: 0px 10px;"><a href="./newsletters/index.html"> 'My Newsletter📰📧' </a></span> </p>
         <p id="tempID" style="margin-top: 10px;">FOR SURE IT WON'T BE BORING</p>
         <button style="padding: 10px;margin-top: 10px;
         border: solid 2px #88ee00;
