--- a/newsletters/1.html
+++ b/newsletters/1.html
@@ -11,7 +11,7 @@
 <body>
     <header class="container">
         <h1 class="page-title">Newsletter #1</h1>
-        <a id="btn-back" href="./index.html"> < Back</a> 
+        <a id="btn-back" href="./index.html">Back</a> 
         <nav>
             <a href="#wins&failures">Wins & Small Failures</a> 
             <a href="#book">Book Notes</a> 
@@ -129,7 +129,7 @@
         <p id="70b5bf09-1806-496c-a015-1ddf5c754b03" class="">- Ajeet Gill
             <br> <a href="../index.html">ajeetshergill.github.io</a>
         </p>
-        <a id="btn-back" href="./index.html"> < Back</a> 
+        <a id="btn-back" href="./index.html">Back</a> 
     </footer>
 
 
