Made longer texts easier to read
Line height, font-size, padding increased

--- a/newsletters/1.html
+++ b/newsletters/1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aj: Newsletter#1</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./newsletter-style.css">
 </head>
 
 <body>
@@ -63,7 +63,7 @@
         </article>
         <article class="sub-section">
             <h3>Detail, what do I mean in the tweet?</h3>
-            <p>Most often, we hear people saying, you should be polite to others, kind and what not. We don&#x27;t like
+            <p class="long-text">Most often, we hear people saying, you should be polite to others, kind and what not. We don&#x27;t like
                 when someone says something to us, and it hurts us, and we blame the next person for disturbing our
                 &quot;inner peace.&quot; Lecture how they should be more sensitive towards someone&#x27;s feelings. To
                 which I say, are you that fragile? Is your inner peace that fragile? Have thick skin, be confident in
