--- a/newsletters/index.html
+++ b/newsletters/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aj: Newsletters</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./newsletter-style.css" />
     <style>
       .newsletter-list a:hover {
         padding: .25rem 1.2rem .2rem 1.2rem;
