Added Google analytics & newsletter archieve page
Newsletter:
Removed the custom template pages. and replaced them with external links to buttondown & Revue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="notice" style="font-size: 1rem; line-height: .5rem;">
         <p>I've started a subscibers list :)</p>
         <p> <span style="font-size: .8rem; font-weight: 800;">to share</span> <span
-            style="background-color: rgb(218 218 218); padding: 0px 10px;"><a href="./newsletters/index.html"> 'My Newsletter📰📧' </a></span> </p>
+            style="background-color: rgb(218 218 218); padding: 0px 10px;"><a href="./newsletters/newsletter-archieve.html"> 'My Newsletter📰📧' </a></span> </p>
         <p id="tempID" style="margin-top: 10px;">FOR SURE IT WON'T BE BORING</p>
         <button style="padding: 10px;margin-top: 10px;
         border: solid 2px #88ee00;
@@ -52,6 +52,15 @@
     <!-- Commented out the waves code coz it was distracting :|  -->
     <!-- <link rel="stylesheet" href="./css/waves.css" /> -->
     <script src="./js/main.js"></script>
+
+    
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+    <script defer src="./init-firebase.js"></script>
+
   </main>
 </body>
 
