Added google analytics to every page
I wasn't sure if I need to add Analytics to every page, so just added to every page to check it.
> Newsletter archive
> 404 page

--- a/404.html
+++ b/404.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta http-equiv="refresh" content="4;url=https://ajeetshergill.github.io/" />
   <link rel="stylesheet" href="./css/404.css" />
+  
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+  <script defer src="./init-firebase.js"></script>
 </head>
 
 <body>
