--- a/newsletters/newsletter-archieve.html
+++ b/newsletters/newsletter-archieve.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,14 +35,16 @@
         margin-bottom: .2rem;
         display: inline-block;
         /* padding-bottom: 0.2rem; */
-    ">👈</span>previous</a><h1 class="page-title">All Newsletters to date</h1>
-      
+    ">👈</span>previous</a>
+      <h1 class="page-title">All Newsletters to date</h1>
+
     </section>
     <section class="container">
       <h2 id="">Jan 1 - Jan 31</h2>
       <article class="sub-section newsletter-list" id="">
         <h3 id="" class="article-heading">
-          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-1/" target="_blank">#1<sup>st </sup> Newsletter </a>
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-1/" target="_blank">#1<sup>st </sup>
+            Newsletter </a>
         </h3>
       </article>
     </section>
@@ -49,12 +52,24 @@
       <h2 id="">Feb 1 - Feb 28</h2>
       <article class="newsletter-list" id="">
         <h3 id="" class="article-heading">
-          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-2/" target="_blank">#2<sup>nd </sup> Newsletter </a>
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-2/" target="_blank">#2<sup>nd </sup>
+            Newsletter </a>
         </h3>
         <h3 id="" class="article-heading">
-          <a href="https://www.getrevue.co/profile/ajeet_gill/issues/ajeet-s-weekly-newsletter-issue-3-372541" target="_blank">#3<sup>rd </sup> Newsletter </a> <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Bonus : my standup experience ]</sub>
+          <a href="https://www.getrevue.co/profile/ajeet_gill/issues/ajeet-s-weekly-newsletter-issue-3-372541"
+            target="_blank">#3<sup>rd </sup> Newsletter </a> <sub
+            style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Bonus : my standup
+            experience ]</sub>
+        </h3>
+        <h3 id="" class="article-heading">
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-4/"
+            target="_blank">
+            #4<sup>th </sup> Newsletter </a>
+          <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Bonus : what's
+            objectivity? ]</sub>
         </h3>
       </article>
     </section>
   </body>
+
 </html>
