--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <body>
     <header>
       <nav>
-        <a href="./newsletters/newsletter-archieve.html">newsletters</a> | 
+        <a href="./newsletters/newsletter-archieve.html">newsletters</a> |
         <a href="./Q&A/questions.html">questions</a>
       </nav>
     </header>
     <main class="container">
-      
+
 
       <div class="sidebarleft"></div>
       <section class="about-me">
@@ -57,20 +57,32 @@
       </section>
       <div class="sidebarright"></div>
 
-      <!-- Commented out the waves code coz it was distracting :|  -->
-      <!-- <link rel="stylesheet" href="./css/waves.css" /> -->
-      <script src="./js/main.js"></script>
-
-
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
-      <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-      <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-      <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-      <script defer src="./init-firebase.js"></script>
 
     </main>
-    
+    <!-- Commented out the waves code coz it was distracting :|  -->
+    <!-- <link rel="stylesheet" href="./css/waves.css" /> -->
+    <script src="./js/main.js"></script>
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+    <script defer src="./init-firebase.js"></script>
+    <!-- Twitter universal website tag code -->
+    <script>
+      !function (e, t, n, s, u, a) {
+        e.twq || (s = e.twq = function () {
+          s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+        }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
+          a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
+      }(window, document, 'script');
+      // Insert Twitter Pixel ID and Standard Event data below
+      twq('init', 'o5lb9');
+      twq('track', 'PageView');
+    </script>
+    <!-- End Twitter universal website tag code -->
   </body>
 
 </html>
