--- a/newsletters/newsletter-archieve.html
+++ b/newsletters/newsletter-archieve.html
@@ -62,14 +62,34 @@
             experience ]</sub>
         </h3>
         <h3 id="" class="article-heading">
-          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-4/"
-            target="_blank">
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-4/" target="_blank">
             #4<sup>th </sup> Newsletter </a>
           <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Bonus : what's
             objectivity? ]</sub>
         </h3>
       </article>
     </section>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
+    <script defer src="./init-firebase.js"></script>
+
+    <!-- Twitter universal website tag code -->
+    <script>
+      !function (e, t, n, s, u, a) {
+        e.twq || (s = e.twq = function () {
+          s.exe ? s.exe.apply(s, arguments) : s.queue.push(arguments);
+        }, s.version = '1.1', s.queue = [], u = t.createElement(n), u.async = !0, u.src = '//static.ads-twitter.com/uwt.js',
+          a = t.getElementsByTagName(n)[0], a.parentNode.insertBefore(u, a))
+      }(window, document, 'script');
+      // Insert Twitter Pixel ID and Standard Event data below
+      twq('init', 'o5lb9');
+      twq('track', 'PageView');
+    </script>
+    <!-- End Twitter universal website tag code -->
   </body>
 
 </html>
