Added 5th newsletter link

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Ajeet Gill Ver: 1.1.1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="4;url=https://ajeetshergill.github.io/" />
+  <!-- <meta http-equiv="refresh" content="4;url=https://ajeetshergill.github.io/" /> -->
   <link rel="stylesheet" href="./css/404.css" />
   
   <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -23,14 +23,14 @@
     <p>In my world we call it,</p>
     <h1>404</h1>
     <h3>PAGE DOESN'T EXIST</h3>
-    <p>Lemme redirect you <br> to someplace better. </p>
+    <p>Here, try my <a href="./newsletters/newsletter-archieve.html">newsletter</a> or goto <a href="./">home</a>.</p>
 
-    <p>Just a second <span id='loading-dots'>...</span></p>
+    
     <!-- <div class="sidebarright"></div> -->
 
   </main>
 
-  <link rel="stylesheet" href="./css/waves.css" />
+  <!-- <link rel="stylesheet" href="./css/waves.css" /> -->
   <!-- <script src="./js/404.js"></script> -->
 </body>
 
