--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <header>
       <nav>
         <a href="./newsletters/newsletter-archieve.html">newsletters</a> |
-        <a href="./Q&A/questions.html">questions</a>
+        <a href="./Q&A/questions.html">questions</a> | 
+        <a href="./random/index.html">random</a>
       </nav>
     </header>
     <main class="container">
