--- a/newsletters/newsletter-archieve.html
+++ b/newsletters/newsletter-archieve.html
@@ -77,6 +77,11 @@
             #5<sup>th </sup> Newsletter </a>
           <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Anxiety: Good or Bad ]</sub>
         </h3>
+        <h3 id="" class="article-heading">
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-6/" target="_blank">
+            #6<sup>th </sup> Newsletter </a>
+          <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Don't say: Be positive ]</sub>
+        </h3>
       </article>
     </section>
 
