--- a/random/he-needs-time/he_just_needs_some_time.html
+++ b/random/he-needs-time/he_just_needs_some_time.html
@@ -37,11 +37,10 @@
           <img src="./mypic.jpg" alt="" srcset="" width="100%">
           <p class="long-para">
             So there I was, sitting on the footpath crying my heart out, seeking attention, hoping that at least one
-            soul
-            will ask what’s wrong? No one. No one asked.
+            soul will ask what’s wrong? No one. No one asked.
           </p>
           <p class="long-para"> Most of the people I was surrounded with, they didn't know what to do, how to help. If anything they were
-            making the situation worse by the modern version of good old advices which had their roots in stigma.
+            making the situation worse by the modern version of good old advices which had their roots in stigma & soceity conditioning.
           </p>
           <p class="long-para">No one I knew, or had any clue about how to help me. "He just needs some time" they said.
             "Go join work, keep yourself busy, it'll make you stop thinking about what happened", they said.
