--- a/random/doing-nothing.html
+++ b/random/doing-nothing.html
@@ -63,13 +63,14 @@
           </p>
           <h3>Different forms of fooling yourself by being productive</h3>
           <p class="long-para">
-            This sieves into our lives in different forms.
+            This sieves into our lives in different forms.<br>
 
             The urge to consume that pending article, podcast, watch something educational when taking a walk, or
-            sitting in a bus/car.
-            Sunday passes by before you notice it because so much work came up.
+            sitting in a bus/car.<br>
+            Sunday passes by before you notice it because so much work came up.<br>
 
-            Ever heard of it? Keep yourself busy- you won't think about it.
+            Ever heard of it? Keep yourself busy- you won't think about it.<br>
+            <img src="./img/art-of-doing-nothing (2).png" alt="" srcset="" width="100%">
           </p>
           <h2>But isn't it better to use "this time I was gonna waste" to do something "more productive"?</h2>
 
@@ -115,7 +116,7 @@
             "Am I running away from mine default thoughts disguised in the form of productivity? "
           </p>
           
-
+          
           <figure class="container container--question">
             <!-- Semantic
             https://css-tricks.com/quoting-in-html-quotations-citations-and-blockquotes/#hey-what-about-the-figure-element -->
@@ -127,6 +128,7 @@
               &mdash; Ajeet Gill<cite></cite>
             </figcaption>
           </figure>          
+          <img src="./img/art-of-doing-nothing (1).png" alt="" srcset="" width="100%">
           <hr>
           <p class="long-para long-para--less-imp">
             <sup>1</sup> I just thought of this exercise. And don't use it myself, but I'll try this.<br>
