Added The Art of Doing nothing on Random Page

--- a/random/index.html
+++ b/random/index.html
@@ -35,8 +35,9 @@
         margin-bottom: .2rem;
         display: inline-block;
         /* padding-bottom: 0.2rem; */
-    ">👈</span>previous</a>
-      <h1 class="page-title">Sharing useful random things</h1>
+    ">👈</span>home</a>
+      <!-- <h1 class="page-title">Sharing useful random things</h1> -->
+      <h1 class="page-title">I wrote these :)</h1>
 
     </section>
     <section class="container">
@@ -48,6 +49,23 @@
         </h3>
         <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ 2017-18: when I hit rock bottom ]</sub>
       </article>
+      <article class="sub-section newsletter-list" id="">
+        When people say they do nothing, what do they mean?
+        <h3 id="" class="article-heading">
+            
+          <a href="./doing-nothing.html" target="">🧘‍♂️ The art of doing nothing</a>
+        </h3>
+        <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ They literally don't do anything, just observe stuff around them]</sub>
+      </article>
+      <!-- 
+        <article class="sub-section newsletter-list" id="">
+        Some pre-text
+        <h3 id="" class="article-heading">
+          <a href="./doing-nothing.html" target="">(optional emoji 🤔) HEADING</a>
+        </h3>
+        <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ They literally don't do anything, just observe stuff around them]</sub>
+      </article>
+      -->
     </section>
 
 
