Archieve: added #7 newsletter

--- a/newsletters/newsletter-archieve.html
+++ b/newsletters/newsletter-archieve.html
@@ -35,7 +35,7 @@
         margin-bottom: .2rem;
         display: inline-block;
         /* padding-bottom: 0.2rem; */
-    ">👈</span>previous</a>
+    ">👈</span>home</a>
       <h1 class="page-title">All Newsletters to date</h1>
 
     </section>
@@ -82,6 +82,21 @@
             #6<sup>th </sup> Newsletter </a>
           <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Don't say: Be positive ]</sub>
         </h3>
+      </article>
+    </section>
+    <section id="april2021" class="container">
+      <h2 id="">April 2021</h2>
+      <article class="newsletter-list" id="">
+        <h3 id="" class="article-heading">
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-7-the-art-of-doing-nothing/" target="_blank">
+            #7<sup>th </sup> Newsletter: The Art Of Doing Nothing </a>
+          <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ What do people mean by "doing nothing?" ]</sub>
+        </h3>
+        <!-- <h3 id="" class="article-heading">
+          <a href="https://buttondown.email/Ajeet_Gill/archive/ajs-newsletter-6/" target="_blank">
+            #7<sup>th </sup> Newsletter </a>
+          <sub style="display: inline-block;position: relative;top: -.5rem;font-size: .8rem;">[ Don't say: Be positive ]</sub>
+        </h3> -->
       </article>
     </section>
 
