Added the gif, the art of doing nothing

--- a/random/doing-nothing.html
+++ b/random/doing-nothing.html
@@ -21,7 +21,7 @@
   <body>
     <header class="container container--header">
       <h1><a href="/"><span style="font-size:1.3em; margin-right: -9.2px;">&And;</span>J</a></h1>
-      <a id="btn-back" href="../index.html"><span style="
+      <a id="btn-back" href="/random/index.html"><span style="
         font-size: 1.2rem;
         margin-bottom: .2rem;
     ">👈</span>back to random articles</a>
@@ -129,6 +129,12 @@
             </figcaption>
           </figure>          
           <img src="./img/art-of-doing-nothing (1).png" alt="" srcset="" width="100%">
+          <hr>
+          <h2>The relatable "art of doing nothing" :)</h2>
+          <img src="./img/art-of-doing-nothing.gif" alt="" srcset="" width="100%">
+
+          <!-- [<a href="https://twitter.com/intent/tweet?text=The relatable 'art of doing nothing' :)%0Ahttps://twitter.com/i/status/1378650346516475905%0A-@ajeet_gill" >Tweet</a> ] -->
+          [ <a href="https://twitter.com/intent/retweet?tweet_id=1378288208006541312" >Retweet</a> ]
           <hr>
           <p class="long-para long-para--less-imp">
             <sup>1</sup> I just thought of this exercise. And don't use it myself, but I'll try this.<br>
