--- a/random/he-needs-time/he_just_needs_some_time.html
+++ b/random/he-needs-time/he_just_needs_some_time.html
@@ -20,10 +20,10 @@
   <body>
     <header class="container container--header">
       <h1><a href="/"><span style="font-size:1.3em; margin-right: -9.2px;">&And;</span>J</a></h1>
-      <a id="btn-back" href="../index.html"><span style="
+      <a id="btn-back" href="/random/index.html"><span style="
         font-size: 1.2rem;
         margin-bottom: .2rem;
-    ">👈</span>previous</a>
+    ">👈</span>back to random articles</a>
 
     </header>
     <hr>
