Fixed the relative path on 404 page
the link wasn't working on something like
.io/asdasd/asdasd/404

coz it was looking for "./home-index"

so changed it to "/home-index"

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <p>In my world we call it,</p>
     <h1>404</h1>
     <h3>PAGE DOESN'T EXIST</h3>
-    <p>Here, try my <a href="./newsletters/newsletter-archieve.html">newsletter</a> or goto <a href="./">home</a>.</p>
+    <p>Here, try my <a href="/newsletters/newsletter-archieve.html">newsletter</a> or goto <a href="/">home</a>.</p>
 
     
     <!-- <div class="sidebarright"></div> -->
