don't remember the changes.
Note: make small commits

--- a/random/doing-nothing.html
+++ b/random/doing-nothing.html
@@ -7,12 +7,6 @@
     <title>Aj: The Art of Doing Nothing</title>
     <!-- <link rel="stylesheet" href="./style.css" /> -->
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
     <link rel="stylesheet" href="./he-needs-time/single-article-style.css">
     <link rel="stylesheet" href="../Q&A/q&a.css">
 
@@ -152,7 +146,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
 https://firebase.google.com/docs/web/setup#available-libraries -->
     <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
+    <script defer src="/init-firebase.js"></script>
 
     <!-- Twitter universal website tag code -->
     <script>
