--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <!-- TODO: Add SDKs for Firebase products that you want to use
     https://firebase.google.com/docs/web/setup#available-libraries -->
   <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-  <script defer src="./init-firebase.js"></script>
+  <script defer src="/init-firebase.js"></script>
 </head>
 
 <body>
