--- a/newsletters/newsletter-archieve.html
+++ b/newsletters/newsletter-archieve.html
@@ -20,12 +20,6 @@
         transition: 0.2s all;
       }
     </style>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
   </head>
 
   <body>
@@ -105,7 +99,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
 https://firebase.google.com/docs/web/setup#available-libraries -->
     <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
+    <script defer src="/init-firebase.js"></script>
 
     <!-- Twitter universal website tag code -->
     <script>
