--- a/random/he-needs-time/he_just_needs_some_time.html
+++ b/random/he-needs-time/he_just_needs_some_time.html
@@ -7,12 +7,7 @@
     <title>Aj: Rock-bottom</title>
     <!-- <link rel="stylesheet" href="./style.css" /> -->
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-      https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
+
     <link rel="stylesheet" href="./single-article-style.css">
 
   </head>
@@ -87,7 +82,7 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
 https://firebase.google.com/docs/web/setup#available-libraries -->
     <script defer src="https://www.gstatic.com/firebasejs/8.2.7/firebase-analytics.js"></script>
-    <script defer src="./init-firebase.js"></script>
+    <script defer src="/init-firebase.js"></script>
 
     <!-- Twitter universal website tag code -->
     <script>
