--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <!-- SUGGESTION: auto read the default theme of user system and set enable theme on the page accordingly -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/header.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./newsletters/newsletter-archieve.html">newsletters</a> |
-        <a href="./Q&A/questions.html">questions</a> | 
-        <a href="./random/index.html">random</a>
+      <nav class="nav">
+        <a class="nav__items" href="./newsletters/newsletter-archieve.html">newsletters</a>
+        <a class="nav__items" href="./Q&A/questions.html">questions</a>
+        <a class="nav__items" href="./random/index.html">random</a>
+        <a class="nav__items" href="https://forms.gle/fEiUkrpKztEZNkRb9">Correct AJ Form</a>
       </nav>
     </header>
     <main class="container">
