Added a referral link page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a class="nav__items" href="./newsletters/newsletter-archieve.html">newsletters</a>
         <a class="nav__items" href="./Q&A/questions.html">questions</a>
         <a class="nav__items" href="./random/index.html">random</a>
+        <a class="nav__items" href="./referrals.html">referrals</a>
         <a class="nav__items" href="https://forms.gle/fEiUkrpKztEZNkRb9">Correct AJ Form</a>
       </nav>
     </header>
